# practice-leptos

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  leptosfmt.toml  nohup.out  package-lock.json  package.json  rustfmt.toml  tailwind.config.js
.run/: Trunk.run.xml
assets/: avatar-1.aseprite  background.aseprite  speech-bubble.aseprite
src/: components.rs  main.rs
src/pages/: blog.rs  blog_post.rs  home.rs  mod.rs
style/: tailwind.css
